--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -98,9 +98,9 @@
 <script src="~/Scripts/app/utilities.factory.js"></script>
 <script src="~/Scripts/app/messaging.controller.js"></script>
 @*@if (route == "/loan/eligibility")
-{
-    <script src="~/Scripts/app/eligibility.controller.js"></script>
-}*@
+    {
+        <script src="~/Scripts/app/eligibility.controller.js"></script>
+    }*@
 
 <script src="~/Scripts/app/eligibility.controller.js"></script>
 <script src="~/Scripts/app/myApplications.controller.js"></script>
@@ -119,68 +119,76 @@ else if (route.IndexOf("/fullhouse/housedesign", StringComparison.Ordinal) > -1)
     <script src="~/Scripts/app/HouseDesign.js"></script>
 }
 
+@if (!User.Identity.IsAuthenticated)
+{
+    <script type="text/javascript">
+        $("#showNoteModal").modal("show");
+    </script>
+
+}
+
 <script src="~/assets/js/scripts.js" type="text/javascript"></script>
 
 <style>
     .switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 30px;
-}
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 30px;
+    }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
+        /* Hide default HTML checkbox */
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 23px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 23px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
 
-input:checked + .slider {
-  background-color: #2196F3;
-}
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
 
-.slider.round:before {
-  border-radius: 50%;
-}
+        .slider.round:before {
+            border-radius: 50%;
+        }
 </style>
