--- a/ProjectUbuild/assets/foundry/css/theme-red.css
+++ b/ProjectUbuild/assets/foundry/css/theme-red.css
@@ -1720,15 +1720,15 @@ input[type="password"] {
   cursor: default;
 }
 input[type="text"],
-input[type="password"] {
-  background: #f5f5f5;
-  border: none;
-  width: 100%;
-  height: 50px;
-  padding-left: 20px;
-  font-weight: 500;
-  margin-bottom: 24px;
-  border-radius: 0;
+input[type="password"], input[type="number"] {
+    background: #f5f5f5;
+    border: none;
+    width: 100%;
+    height: 50px;
+    padding-left: 20px;
+    font-weight: 500;
+    margin-bottom: 24px;
+    border-radius: 0;
 }
 .image-bg input[type="text"],
 .image-bg textarea {
