datepicker min fixes

--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -329,7 +329,7 @@ else
                                                                        name="PermitIssueDate"
                                                                        data-ng-model="vm.profile.PermitIssueDate"
                                                                        class="form-control"
-                                                                       id="datepicker-component3">
+                                                                       id="datepicker-PermitIssueDate">
                                                             </div>
                                                             <div class="input-group-addon">
                                                                 <i class="fa fa-calendar"></i>
@@ -461,7 +461,7 @@ else
                                                                        required=""
                                                                        data-ng-model="vm.profile.IdIssueDate"
                                                                        class="form-control"
-                                                                       id="datepicker-component5">
+                                                                       id="datepicker-IdIssueDate">
                                                             </div>
                                                             <div class="input-group-addon">
                                                                 <i class="fa fa-calendar"></i>
